# torontobikeproblem

./: .gitignore  LICENSE  README.md  capacityscraper.py  district_demand_per_day.csv  generateDemandData.py  generateDistrictData.py  gurobistuff.ipynb  koordinaten.csv  pyproject.toml  station_recommender.ipynb
models/: attention.py  decoder.py  encoder.py  masking.py  model.py
models/fourier/: __init__.py  fnet.py  module.py
processed_data/: district_demand_per_day.csv
scripts/: dataLoader.py  generateDistrictData.py
